Added CSPO certification to education section.

--- a/resume.tex
+++ b/resume.tex
@@ -209,6 +209,7 @@ Failed to acquire funding beyond the business-planning stage.}
 \jobentry{1999 -- 2000}{Application Developer}{UPC Nederland}{Solo development of web based 200+ agent customer support system}
 
 \sectionheader{Education}
+\educationentry{}{2023}{Certified Scrum Product Owner}{KnowledgeHut}
 \educationentry{2000}{2003}{Industrial Engineering and Maintenance Science}{TU/e}
 \educationentry{2001}{2002}{Management and Organizational Sciences}{University of Tilburg}
 \educationentry{1997}{1998}{High School}{Susquehanna Township High School, Harrisburg, PA}
